TAB-661 Dropdowns in action bars in fixed headers are no longer overlapped by fixed table header

--- a/modules/home/src/main/webapp/static/css/embeddable.less
+++ b/modules/home/src/main/webapp/static/css/embeddable.less
@@ -329,7 +329,7 @@ ul {
 }
 
 
-#feedback-table, #submission-table {
+.feedback-table, .submission-table {
 	border-collapse: collapse;
 
 		colgroup {
